[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI-Sprite/Sprite-0001-Sheet.png" type="Texture" id=1]
[ext_resource path="res://UI-Sprite/borderSprite-0001-Sheet.png" type="Texture" id=2]
[ext_resource path="res://UI-Sprite/valueSprite-0001-Sheet.png" type="Texture" id=3]
[ext_resource path="res://UI/HealthBar_monsters.gd" type="Script" id=4]

[node name="HealthBar_monsters" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.894118, 0.341176, 0.172549, 1 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 500.0
margin_bottom = 100.0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]
